# sourced

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: publish.yml  test.yml
daedalus/: __init__.py  __main__.py  analyze.py
daedalus/_internal/: parallelization.py
daedalus/analysis/: __main__.py
daedalus/dataset/: __main__.py  db.py  pypi.py
examples/: python_parsing_index.py  python_specific_source.py
sourced/: __init__.py  __main__.py  analyze.py
sourced/_internal/: parallelization.py
sourced/dataset/: __main__.py  db.py  pypi.py
tests/dataset/: test_db.py
