[metadata]
name = daedalus
version = 0.1.0a0
description = Tooling for mass-scale Python testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/daedalus
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/isidentical/daedalus
    Tracker = https://github.com/isidentical/daedalus/issues

[options]
packages = find:
install_requires =
    platformdirs>=2.4.0
    rich>=12.0.0
python_requires = >=3.9

[options.entry_points]
console_scripts =
    daedalus = daedalus.__main__:main
