[metadata]
name = sourced
version = 0.1.0a0
description = Tooling around mass-scale Python source code analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/sourced
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/isidentical/sourced
    Tracker = https://github.com/isidentical/sourced/issues

[options]
packages = find:
install_requires =
    platformdirs>=2.4.0
    rich>=12.0.0
python_requires = >=3.9

[options.entry_points]
console_scripts =
    sourced = sourced.__main__:main
